packet_extractor working

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -7,4 +7,5 @@
 #
 
 install(FILES
-    sprobe_sample_counter.block.yml DESTINATION share/gnuradio/grc/blocks)
+    sprobe_sample_counter.block.yml
+    sprobe_packet_extractor.block.yml DESTINATION share/gnuradio/grc/blocks)
