--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -12,7 +12,8 @@
 include(GrPlatform) #define LIB_SUFFIX
 
 list(APPEND sprobe_sources
-    sample_counter_impl.cc)
+    sample_counter_impl.cc
+    packet_extractor_impl.cc)
 
 set(sprobe_sources
     "${sprobe_sources}"
