--- a/python/sprobe/CMakeLists.txt
+++ b/python/sprobe/CMakeLists.txt
@@ -35,3 +35,4 @@ add_custom_target(
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}
             ${PROJECT_BINARY_DIR}/test_modules/gnuradio/sprobe/)
 GR_ADD_TEST(qa_sample_counter ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_sample_counter.py)
+GR_ADD_TEST(qa_stream_test ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_stream_test.py)
