--- a/python/sprobe/bindings/CMakeLists.txt
+++ b/python/sprobe/bindings/CMakeLists.txt
@@ -26,7 +26,7 @@ include(GrPybind)
 
 list(APPEND sprobe_python_files
     sample_counter_python.cc
-    packet_extractor_python.cc python_bindings.cc)
+    unguard_tagged_stream_python.cc python_bindings.cc)
 
 gr_pybind_make_oot(sprobe ../../.. gr::sprobe "${sprobe_python_files}")
 
