--- a/grc/sprobe_guard_tagged_stream.block.yml
+++ b/grc/sprobe_guard_tagged_stream.block.yml
@@ -1,5 +1,5 @@
-id: sprobe_unguard_tagged_stream_x
-label: Unguard Tagged Stream
+id: sprobe_guard_tagged_stream_x
+label: Guard Tagged Stream
 flags: [ python, cpp ]
 category: '[sprobe]'
 
@@ -17,14 +17,10 @@ parameters:
   option_attributes:
     fcn: [c, f, b, s, i]
   hide: part
-- id: start_tag_name
-  label: Start Tag Name
+- id: length_tag_key
+  label: Length Tag Key
   dtype: string
   default: packet_len
-- id: end_tag_name
-  label: End Tag Name
-  dtype: string
-  default: packet_end
 
 #  Make one 'inputs' list entry per input and one 'outputs' list entry per output.
 #  Keys include:
@@ -43,18 +39,12 @@ outputs:
 
 templates:
   imports: from gnuradio import sprobe
-  make: sprobe.unguard_tagged_stream_${in_type.fcn}(${start_tag_name}, ${end_tag_name})
-  callbacks:
-  - set_start_tag_name(${start_tag_name})
-  - set_end_tag_name(${end_tag_name})
+  make: sprobe.guard_tagged_stream_${in_type.fcn}(${length_tag_key})
 
 cpp_templates:
-  includes: ['#include <gnuradio/sprobe/unguard_tagged_stream.h>']
-  declarations: 'sprobe::unguard_tagged_stream_${in_type.fcn}::sptr ${id};'
-  make: 'this->${id} = sprobe::unguard_tagged_stream_${in_type.fcn}::make(${start_tag_name}, ${end_tag_name});'
-  callbacks:
-  - set_start_tag_name(${start_tag_name})
-  - set_end_tag_name(${end_tag_name})
+  includes: ['#include <gnuradio/sprobe/guard_tagged_stream.h>']
+  declarations: 'sprobe::guard_tagged_stream_${in_type.fcn}::sptr ${id};'
+  make: 'this->${id} = sprobe::guard_tagged_stream_${in_type.fcn}::make(${length_tag_key});'
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
