--- a/python/sprobe/CMakeLists.txt
+++ b/python/sprobe/CMakeLists.txt
@@ -36,3 +36,4 @@ add_custom_target(
             ${PROJECT_BINARY_DIR}/test_modules/gnuradio/sprobe/)
 GR_ADD_TEST(qa_sample_counter ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_sample_counter.py)
 GR_ADD_TEST(qa_stream_test ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_stream_test.py)
+GR_ADD_TEST(qa_guard_tagged_stream ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_guard_tagged_stream.py)
