--- a/grc/sprobe_guard_tagged_stream.block.yml
+++ b/grc/sprobe_guard_tagged_stream.block.yml
@@ -21,6 +21,10 @@ parameters:
   label: Length Tag Key
   dtype: string
   default: packet_len
+- id: end_tag_key
+  label: End Tag Key
+  dtype: string
+  default: packet_end
 
 #  Make one 'inputs' list entry per input and one 'outputs' list entry per output.
 #  Keys include:
@@ -39,12 +43,16 @@ outputs:
 
 templates:
   imports: from gnuradio import sprobe
-  make: sprobe.guard_tagged_stream_${in_type.fcn}(${length_tag_key})
+  make: sprobe.guard_tagged_stream_${in_type.fcn}(${length_tag_key}, ${end_tag_key})
+  callbacks:
+  - set_end_tag_key(${end_tag_key})
 
 cpp_templates:
   includes: ['#include <gnuradio/sprobe/guard_tagged_stream.h>']
   declarations: 'sprobe::guard_tagged_stream_${in_type.fcn}::sptr ${id};'
-  make: 'this->${id} = sprobe::guard_tagged_stream_${in_type.fcn}::make(${length_tag_key});'
+  make: 'this->${id} = sprobe::guard_tagged_stream_${in_type.fcn}::make(${length_tag_key}, ${end_tag_key});'
+  callbacks:
+  - set_end_tag_key(${end_tag_key})
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
