forgot to mention cpp

--- a/grc/sprobe_tagged_stream_buffer_filler.block.yml
+++ b/grc/sprobe_tagged_stream_buffer_filler.block.yml
@@ -1,5 +1,6 @@
-id: sprobe_tagged_stream_buffer_filler
+id: sprobe_tagged_stream_buffer_filler_x
 label: Tagged Stream Buffer Filler
+flags: [ python, cpp ]
 category: '[sprobe]'
 
 #  Make one 'parameters' list entry for every parameter you want settable from the GUI.
